--- a/Budgeting/appsettings.json
+++ b/Budgeting/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
-}
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DbConnection": "Data Source=.\\SQLEXPRESS; Initial Catalog=Budget; User ID=sa; Password=sa;"
+  }
+  }
